2009-01-22  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkicontheme.c (gtk_icon_theme_has_icon): g_return_if_fail()
	on icon_name != NULL so we get a warning instead of a crash here.

2009-01-21  Matthias Clasen <mclasen@redhat.com>

	* NEWS: Updates

2009-01-21  Matthias Clasen <mclasen@redhat.com>

	* gtk/gtkentry.c: Don't show windows that may not exist

2009-01-21  Matthias Clasen <mclasen@redhat.com>

	* gtk/gtklabel.c: Implement select-by-words for selectable labels.

2009-01-21  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkcursor-win32.c: Rename static local functions and
	variables to not have any unnecessary _ or _gdk_win32 prefix.

	* gdk/win32/gdkcursor-win32.c (hcursor_from_type): Implement
	creating a GDK_BLANK_CURSOR.

2009-01-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Change the Caps Lock warning to the more
	neutral "Caps Lock is on". Requested by Wouter Bolsterlee

2009-01-21  Matthias Clasen  <mclasen@redhat.com>

	Bug 568552 – gtk_combo + gtk entry in invisible mode takes 100% cpu

	* gtk/gtkentry.c: Fix an expose loop caused by raising windows out
	of an expose handler. Also, don't show the 'Caps Lock' warning for
	activated input methods, since that makes it permanently shown
	for some locales. It should not be that necessary, now that we
	do show preedit text even in password entries. Pointed out by
	Frederic Crozat.

2009-01-21  Federico Mena Quintero  <federico@novell.com>

	* gtk/gtkfilechooserdefault.c (save_widgets_create): Set
	local_only on the location entry when we create it...
	(set_local_only): ... and set it here only if the location entry
	exists.

2009-01-21  Marek Kasik  <mkasik@redhat.com>

	Bug 561801 - "scheduled printing" doesn't function as expected

	* gtk/gtkprintunixdialog: Add tooltip.
	* modules/printbackends/cups/gtkprintbackendcups.c: Add conversion
	  from local time to utc time for scheduled printing.

2009-01-20  Federico Mena Quintero  <federico@novell.com>
