@@ -1,3 +1,10 @@
+2009-01-22  Matthew Barnes  <mbarnes@redhat.com>
+
+	Bug 568334 – Constructor properties for GtkAction
+
+	* gtk/gtkaction.c (gtk_action_class_init): Make all properties
+	G_PARAM_CONSTRUCT except "action-group".
+
 2009-01-22  Michael Natterer  <mitch@imendio.com>
 
 	* gtk/gtkicontheme.c (gtk_icon_theme_has_icon): g_return_if_fail()
